fixed package generation
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@6 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -840,8 +840,17 @@
                             <groupId>org.jahia.server</groupId>
                             <artifactId>jahia-war</artifactId>
 				            <classifier>${jahia.war.classifier}</classifier>
+                            <excludes>
+                            </excludes>
                         </overlay>
                     </overlays>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <!--classpathPrefix>lib/</classpathPrefix-->
+                            <!--addExtensions>true</addExtensions-->
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
 
@@ -862,6 +871,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
 
         <resources>
