use jahia-pack-war for packaging
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@10 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -251,7 +251,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jahia.server</groupId>
-                                    <artifactId>jahia-war</artifactId>
+                                    <artifactId>jahia-pack-war</artifactId>
                                     <version>${project.version}</version>
                                     <classifier>${jahia.war.classifier}</classifier>
                                     <type>war</type>
