--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
         <ant.version>1.8.2</ant.version>
 
         <driver.derby.version>10.7.1.1</driver.derby.version>
-        <driver.mssql.version>1.2-fixed</driver.mssql.version>
         <driver.mysql.version>5.1.15</driver.mysql.version>
+        <driver.postgresql.version>9.0-801.jdbc3</driver.postgresql.version>
 
         <!-- MANIFEST.MF information -->
         <jahia.manifest.vendor.name>Jahia Solutions Group SA</jahia.manifest.vendor.name>
