1) Replace developmentMode with operatingMode for more flexibility. Currently supported modes are: - development - production - distantPublicationServer 2) Disable Edit/Studio/Contribute servlets when the operatingMode is set to distantPublicationServer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@37 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -4,7 +4,7 @@ databasePassword=${dbSettings.connection.password}
 databaseType=${dbSettings.dbms.type}
 databaseUrl=${dbSettings.connection.url}
 databaseUsername=${dbSettings.connection.username}
-developmentMode=${developmentMode}
+operatingMode=${operatingMode}
 jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
 jahiaRootLastname=${superUser.lastname}
