--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -14,8 +14,8 @@
     <properties>
         <product.name>Jahia xCM Community Edition</product.name>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
-        <jahia.installers.version>2.2</jahia.installers.version>
-        <izpack.version>4.3.4.jahia2</izpack.version>
+        <jahia.installers.version>2.3</jahia.installers.version>
+        <izpack.version>4.3.4.jahia3</izpack.version>
     </properties>
 
     <dependencies>
@@ -333,7 +333,10 @@
                             <tasks>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
                                     <arg value="izpack.i18n.packsLang"/>
+                                    <!--
                                     <arg value="en,fr,de,it,pt,es"/>
+                                    -->
+                                    <arg value="en,fr,de"/>
                                     <arg
                                             value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
@@ -342,7 +345,10 @@
                                 </java>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
                                     <arg value="izpack.i18n.userInputLang"/>
+                                    <!--
                                     <arg value="en,fr,de,it,pt,es"/>
+                                    -->
+                                    <arg value="en,fr,de"/>
                                     <arg
                                             value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
@@ -351,7 +357,10 @@
                                 </java>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
                                     <arg value="izpack.i18n.customLang"/>
+                                    <!--
                                     <arg value="en,fr,de,it,pt,es"/>
+                                    -->
+                                    <arg value="en,fr,de"/>
                                     <arg
                                             value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
