--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
-    <version>6.5-SNAPSHOT</version>
+    <version>6.5.0.0-RC1</version>
     <packaging>pom</packaging>
     <inceptionYear>2004</inceptionYear>
     <!--
@@ -75,13 +74,13 @@
         <jahia.debug.address>socket:hostname=localhost,port=8000</jahia.debug.address>
         <jahia.deploy.processingServer>true</jahia.deploy.processingServer>
         <jahia.deploy.war.dirName>ROOT</jahia.deploy.war.dirName>
-        <jahia.deploy.war.contextPath/>
+        <jahia.deploy.war.contextPath />
         <jahia.test.url>http://localhost:8080/cms</jahia.test.url>
         <!-- DBMS -->
         <jahia.configure.databaseType>derby_embedded</jahia.configure.databaseType>
         <jahia.configure.databaseUrl>jdbc:derby:directory:jahia;create=true</jahia.configure.databaseUrl>
-        <jahia.configure.databaseUsername/>
-        <jahia.configure.databasePassword/>
+        <jahia.configure.databaseUsername />
+        <jahia.configure.databasePassword />
         <!-- Application server -->
         <jahia.deploy.targetServerType>tomcat</jahia.deploy.targetServerType>
         <jahia.deploy.targetServerVersion>6</jahia.deploy.targetServerVersion>
@@ -89,9 +88,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://10.8.37.111/svn/jahia_pack/trunk/</connection>
-        <developerConnection>scm:svn:http://10.8.37.111/svn/jahia_pack/trunk/</developerConnection>
-        <url>http://10.8.37.111/svn/jahia_pack/trunk</url>
+        <connection>scm:svn:http://10.8.37.111/svn/jahia_pack/tags/JAHIA_PACK_6_5_0_0_RC1</connection>
+        <developerConnection>scm:svn:http://10.8.37.111/svn/jahia_pack/tags/JAHIA_PACK_6_5_0_0_RC1</developerConnection>
+        <url>http://10.8.37.111/svn/jahia_pack/tags/JAHIA_PACK_6_5_0_0_RC1</url>
     </scm>
     <developers>
         <developer>
