Remove jahia.war.classifier, include dependency to jahia-pack-war
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@58 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-qa-package/qa-5/pom.xml
+++ b/package/jahia-qa-package/qa-5/pom.xml
@@ -17,7 +17,12 @@
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-war</artifactId>
             <version>6.5-SNAPSHOT</version>
-            <classifier>${jahia.war.classifier}</classifier>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.server</groupId>
+            <artifactId>jahia-pack-war</artifactId>
+            <version>6.5-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
