--- a/package/jahia-qa-package/qa-3/pom.xml
+++ b/package/jahia-qa-package/qa-3/pom.xml
@@ -17,7 +17,12 @@
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-war</artifactId>
             <version>6.5-SNAPSHOT</version>
-            <classifier>${jahia.war.classifier}</classifier>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.server</groupId>
+            <artifactId>jahia-pack-war</artifactId>
+            <version>6.5-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -99,10 +104,6 @@
                             <targetServerVersion>6</targetServerVersion>
                             <targetServerDirectory>${project.build.directory}/apache-tomcat-${jahia.tomcat.version}</targetServerDirectory>
                             <targetConfigurationDirectory>${project.build.directory}/apache-tomcat-${jahia.tomcat.version}</targetConfigurationDirectory>
-                            <siteImportLocation>
-                                <param>/home/bamboo/bin/siteImport_DemoSite.zip</param>
-                                <param>/home/bamboo/bin/siteImport_testSite.zip</param>
-                            </siteImportLocation>
                             <cluster_activated>false</cluster_activated>
                             <processingServer>true</processingServer>
                             <databaseType>postgresql</databaseType>
