--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -11,7 +11,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <product.name>Jahia xCM Community Edition</product.name>
+        <product.name>Jahia xCM</product.name>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
         <jahia.installers.version>2.4</jahia.installers.version>
         <izpack.version>4.3.4.jahia4</izpack.version>
@@ -198,7 +198,7 @@
                         <configuration>
                             <tasks>
                                 <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt" />
-                                <echo message="installer.filename=Jahia_xCM_CE_v${project.version}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
+                                <echo message="installer.filename=Jahia_xCM_v${project.version}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
                             </tasks>
                         </configuration>
                     </execution>
