--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -107,7 +107,7 @@
                             <headerType>gui</headerType>
                             <priority>normal</priority>
                             <downloadUrl>http://java.com/download</downloadUrl>
-                            <supportUrl>http://www.jahia.org</supportUrl>
+                            <supportUrl>http://www.jahia.com</supportUrl>
                             <customProcName>false</customProcName>
                             <stayAlive>false</stayAlive>
                             <icon>${project.build.directory}/images/jahia.ico</icon>
@@ -123,8 +123,7 @@
                             <versionInfo>
                                 <fileVersion>1.0.0.0</fileVersion>
                                 <txtFileVersion>${project.version}</txtFileVersion>
-                                <fileDescription>${product.name} Windows Installer
-                                </fileDescription>
+                                <fileDescription>${product.name} Windows Installer</fileDescription>
                                 <copyright>${jahia.manifest.vendor.name} (${jahia.manifest.vendor.url})</copyright>
                                 <productVersion>1.0.0.0</productVersion>
                                 <txtProductVersion>${project.version}</txtProductVersion>
