--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,22 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>jahia-test</id>
+            <activation>
+                <property>
+                    <name>jahia.run.tests</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <jahia.war.classifier>test</jahia.war.classifier>
+            </properties>
+            	<modules>
+                	<module>test</module>
+            	</modules>
+        </profile>
+
         <!--
         <profile>
             <id>module-forge</id>
