--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <artifactId>jahia-pack-root</artifactId>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
-    <version>6.5.1.0-SNAPSHOT</version>
+    <version>6.5.0.0</version>
     <packaging>pom</packaging>
     <inceptionYear>2004</inceptionYear>
     <!--
@@ -132,9 +132,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://10.8.37.111/svn/jahia_pack/trunk/</connection>
-        <developerConnection>scm:svn:http://10.8.37.111/svn/jahia_pack/trunk/</developerConnection>
-        <url>http://10.8.37.111/svn/jahia_pack/trunk</url>
+        <connection>scm:svn:http://10.8.37.111/svn/jahia_pack/tags/JAHIA_6_5_0_0</connection>
+        <developerConnection>scm:svn:http://10.8.37.111/svn/jahia_pack/tags/JAHIA_6_5_0_0</developerConnection>
+        <url>http://10.8.37.111/svn/jahia_pack/tags/JAHIA_6_5_0_0</url>
     </scm>
     <developers>
         <developer>
