--- a/test/service/pom.xml
+++ b/test/service/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <artifactId>jahia-pack-test-parent</artifactId>
         <groupId>org.jahia.server</groupId>
-        <version>6.5.1.0-SNAPSHOT</version>
+        <version>6.5.0.0</version>
     </parent>
     <groupId>org.jahia.server</groupId>
     <artifactId>jahia-pack-test-service</artifactId>
@@ -88,19 +88,19 @@
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-impl</artifactId>
-            <version>6.5.1.0-SNAPSHOT</version>
+            <version>6.5.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-test-service</artifactId>
-            <version>6.5.1.0-SNAPSHOT</version>
+            <version>6.5.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>social-service</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
