[maven-release-plugin] prepare for next development iteration
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@97 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/test/service/pom.xml
+++ b/test/service/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <artifactId>jahia-pack-test-parent</artifactId>
         <groupId>org.jahia.server</groupId>
-        <version>6.5.0.0</version>
+        <version>6.5.1.0-SNAPSHOT</version>
     </parent>
     <groupId>org.jahia.server</groupId>
     <artifactId>jahia-pack-test-service</artifactId>
