--- a/pom.xml
+++ b/pom.xml
@@ -567,8 +567,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <goals>deploy</goals>
                     <preparationGoals>clean install</preparationGoals>
-                    <releaseProfiles>installer,windows-installer,qa-build,test,do-attach-javadocs
-                    </releaseProfiles>
+                    <releaseProfiles>installer,windows-installer,qa-build,do-attach-javadocs</releaseProfiles>
                 </configuration>
             </plugin>
 
