--- a/test/service/pom.xml
+++ b/test/service/pom.xml
@@ -88,13 +88,13 @@
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-impl</artifactId>
-            <version>6.5.0.0</version>
+            <version>6.5.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-test-service</artifactId>
-            <version>6.5.0.0</version>
+            <version>6.5.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
