Initial commit of externalized configuration variables, not yet fully functional
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@108 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -4,6 +4,7 @@ databasePassword=${dbSettings.connection.password}
 databaseType=${dbSettings.dbms.type}
 databaseUrl=${dbSettings.connection.url}
 databaseUsername=${dbSettings.connection.username}
+externalizedConfigTargetPath=${externalizedConfigTargetPath}
 operatingMode=${operatingMode}
 jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
