BACKLOG-1708 Use heading instead of panel titles, integrate with Jahia EE installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@112 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -4,7 +4,9 @@ databasePassword=${dbSettings.connection.password}
 databaseType=${dbSettings.dbms.type}
 databaseUrl=${dbSettings.connection.url}
 databaseUsername=${dbSettings.connection.username}
+externalizedConfigActivated=${externalizedConfigActivated}
 externalizedConfigTargetPath=${externalizedConfigTargetPath}
+externalizedConfigClassifier=${externalizedConfigClassifier}
 operatingMode=${operatingMode}
 jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
