--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -52,8 +52,8 @@
     <properties>
         <product.name>Jahia xCM</product.name>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
-        <jahia.installers.version>2.6-SNAPSHOT</jahia.installers.version>
-        <izpack.version>4.3.5-SNAPSHOT</izpack.version>
+        <jahia.installers.version>2.6</jahia.installers.version>
+        <izpack.version>4.3.5-jahia-beta1</izpack.version>
     </properties>
 
     <dependencies>
